# snowflake

./: .gitignore  .gitmodules  LICENSE  README.md  README.org  default.nix  flake.nix  repl.nix  secrets.nix  shell.nix  utility-functions.nix
.github/: README.md  manual-installation.md
config/: README.md  default.nix  gnome.nix  leftwm.nix  nix-conf.nix  picom.conf  shell-abbr.nix  termTheme.nix  xmonad.nix
config/alacritty/: default.nix
config/bash/: default.nix
config/color-palette/: ayu-dark.nix  catppuccin.nix  one-dark.nix
config/colorschemes/: ayu-dark.nix  catppuccin.nix  icy-midnight.nix  kanagawa.nix  one-dark.nix
config/deadd-notify/: deadd.css
config/doom-emacs/: README.org  config.el  config.org  default.nix  init.el  packages.el
config/doom-nvim/: config.lua  doom_config.lua  doom_modules.lua  doom_userplugins.lua  modules.lua  plugins.lua
config/doom.d/: config.el
config/dunst/: xmonad.nix
config/elkowar/: eww.scss  eww.yuck  ewwLib.cabal
config/elkowar/lib/: EWWLib.hs  GetEndWidgets.hs  LockScreen.hs  Screencast.hs  UpdatePowermenuState.hs
config/elkowar/lib/workspaces/: GetWorkspaces.hs  ProcessWorkspaceSwitcherInput.hs
config/elkowar/scss/: bars.scss  clock.scss  divider.scss  graphs.scss  powermenu.scss  rec.scss  sundials.scss  tooltip.scss  workspace-switcher.scss  workspaces.scss
config/elkowar/yuck/: bars.yuck  bat.yuck  clock.yuck  cpu.yuck  mem.yuck  net.yuck  powermenu.yuck  screencast.yuck  workspace-switcher.yuck  workspaces.yuck
config/eww/: README.md
config/fastfetch/: config.conf
config/firefox/: firefox-onebar.css  vertical-tabs.css
config/fish/: ayu-dark.fish  config.fish  default.nix  git.fish  interactive.fish  kanagawa.fish
config/formatters/: stylish-haskell.yaml  stylua.toml
config/git/: default.nix
config/gtk/: xmonad.nix
config/hyprland/: bindings.conf  constants.conf  decorations.conf  hyprland.conf  keymaps.conf  main.conf  pyprland.toml  rules.conf
config/icy-taffybar/: flake.nix  icy-palette.css  icy-taffybar.cabal  taffybar.css  taffybar.hs
config/icy-xmonad/: .gitignore  flake.nix  xmonad.hs
config/kitty/: catppuccin-bar.py  default.nix  kanagawa-bar.py  rose-pine-bar.py  tab_bar.py  tokyonight-bar.py
config/kmonad/: hyperCtl.kbd
config/macchina/: xi.toml
config/mpd/: mpd.conf
config/my-taffybar/: catppuccin.css  flake.nix  my-taffybar.cabal  taffybar.css  taffybar.hs
config/my-xmonad/: .gitignore  README.md  flake.nix  my-xmonad.cabal  xmonad.hs
config/my-xmonad/dist-newstyle/cache/: compiler  config
config/ncmpcpp/: default.nix
config/neofetch/: config.conf  default.nix
config/neovim/: config.lua  default.nix  init.lua
config/nvim/: README.org  custom-plugins.nix  init.lua  plugins.nix
config/nyxt/: TODO.org  aesthetics.lisp  bindings.lisp  config.lisp  search-engines.lisp
config/penrose/: Cargo.toml  default.nix  flake.nix
config/picom/: leftwm.nix  picom.conf  xmonad.nix
config/polybar/: default.nix
config/qt/: xmonad.nix
config/qtile/: README.md  TODO.md  config.py  keymaps.py  layouts.py  todo.md
config/rofi/: default.nix
config/scripts/: brightness.nix  micVol-control.nix  microphone.nix  print-colors.nix  screenshot.nix  volume-control.nix  volume.nix  xmonad.nix
config/shell-abbr/: default.nix
config/starship/: default.nix
config/taffybar/: TODO.org  flake.nix  overlay.nix  raybar.cabal  taffybar.css  taffybar.hs  trufflebar.cabal
config/taffybar/palette/: catppuccin.css  kanagawa.css  rose-pine.css  tokyonight.css
config/tmux/: default.nix  tmux.conf
config/vscodium/: custom-extensions.nix  extensions.nix  keybindings.json  keybindings.nix  settings.json  settings.nix
config/waybar/: config  style.css
config/wezterm/: catppuccin-bar.lua
config/xmonad/: README.md  TODO.md  birostris.cabal  birostrisWM.cabal  flake.nix  icy-xmonad.cabal-bkp  overlay.nix  xmonad.hs
config/xmonad/lib/Gibil/: Colorschemes.hs  Config.hs  Keybindings.hs  Keymaps.hs  Layouts.hs  Scratchpads.hs  Theme.hs
config/xresources/: default.nix
config/zathura/: default.nix
deprecated/: hm-xmonad.nix  xmonad-services.nix  xmonad.hs  xmonad.nix
hardware/: ProBook-440G3.nix  ThinkPad-E595.nix
home/: alacritty.nix  emacs.nix  fish.nix  home-apps.nix  home.nix  ncmpcpp.nix  neovim.nix  zathura.nix
home/common/: default.nix
home/gnome/: default.nix
home/plasma/: default.nix
home/xmonad/: default.nix
home/xmonad/icy-taffybar/: flake.nix  icy-taffybar.cabal  overlay.nix  taffybar.css  taffybar.hs
home/xmonad/icy-xmonad/: flake.nix  icy-xmonad.cabal  overlay.nix  xmonad.hs
home/xmonad/icy-xmonad/Theme/: Xresources.hs
hosts/: ProBook.hm.nix  ProBook.nixos.nix  ThinkPad.hm.nix  ThinkPad.nixos.nix  niximg.nix
hosts/ProBook/: default.nix  home.nix  packages.nix  services.nix  users.nix
hosts/ThinkPad/: configuration.nix  containers.nix  default.nix  packages.nix  services.nix  users.nix
hosts/deprecated/: default.nix  hwCfg.nix
hosts/probook-440g3/: default.nix  hwCfg.nix
hosts/probook-445g6/: default.nix  hardware.nix  hwCfg.nix
hosts/thinkpad-e595/: default.nix  hardware.nix  hwCfg.nix  partition.nix
lib/: README.org  attrs.nix  default.nix  generators.nix  modules.nix  nix-options.nix  nixos.nix  options.nix  paths.nix
modules/: agenix.nix  alacritty.nix  common.nix  config.nix  dconf.nix  disko.nix  emacs.nix  fish.nix  nixpkgs.nix  options.nix  packages.nix  primary.nix  security.nix  xdg.nix
modules/container/: arch.nix
modules/containers/: arch.nix  archlinux.nix  transmission.nix
modules/desktop/: awesomewm.nix  bspwm.nix  default.nix  fcitx5.nix  gnome.nix  ibus.nix  mimeApps.nix  qtile.nix  xmonad.nix
modules/desktop-managers/: README.org  default.nix  gnome.nix  hm.nix  plasma.nix
modules/develop/: c.nix  cc.nix  (+20 more)
overlays/: default.nix  elkowar.nix  haskell.nix  picom.nix  taffybar.nix  ungoogled-chromium.nix  xmonad.nix
profiles/: ProBook-440G3.nix  README.md  ThinkPad-E595.nix  common.nix  default.nix
secrets/: default.nix  secrets.nix
templates/: default.nix
users/: hm-packages.nix  home.nix
(+902 files in other folders)
