cabal-version:      3.0
name:               ewwLib
version:            0.1.0.0
synopsis:           a minimal system-bar to monitor our instances.
-- description:
license:            MIT
author:             IsaacBrown92
maintainer:         Icy-Thought
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:  EWWLib
    -- other-modules:
    -- other-extensions:
    build-depends:    
      , aeson
      , base            >=4.7 && <5
      , bytestring
      , hostname
      , http-client
      , http-conduit
      , lens
      , lens-aeson
      , process
      , raw-strings-qq
      , safe
      , yaml
    hs-source-dirs:   lib
    default-language: GHC2021
