name:           raybar
version:        0.1.0.0
synopsis:       a minimal bar that will evolve within time.
homepage:       https://github.com/Icy-Thought/snowflake
author:         Icy-Thought
maintainer:     Icy-Thought
build-type:     Simple
cabal-version:  >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options:    -fprof-auto
  build-depends:       base
                     , X11
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hostname
                     , hslogger
                     , process
                     , split
                     , text
                     , time
                     , taffybar>=3.2.0
                     , transformers
                     , xdg-basedir
  default-language:    Haskell2010
