name:           icy-xmonad
version:        0.1.0
synopsis:       Icy-Thought's Xmonad configuration.
homepage:       https://github.com/Icy-Thought/Snowflake/modules/window-manager/xmonad
author:         Icy-Thought
maintainer:     Icy-Thought
build-type:     Simple
cabal-version:  >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:      -threaded -g -rtsopts
  ghc-prof-options: -fprof-auto
  build-depends:       base
                     , X11
                     , bytestring
                     , coinbase-pro
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hostname
                     , hslogger
                     , process
                     , split
                     , text
                     , time
                     , taffybar>=3.2.0
                     , transformers
                     , xdg-basedir
  default-language:    Haskell2010

executable icy-xmonad
  main-is:             xmonad.hs
  build-depends:       aeson>=0.11.2.1
                     , X11>=1.8
                     , base >=4.7
                     , bytestring>=0.10.8.1
                     , containers>=0.5.7.1
                     , directory>=1.2.6.2
                     , filepath>=1.4.1.0
                     , hostname>=1.0
                     , multimap>=1.2.1
                     , process>=1.4.3.0
                     , safe
                     , split
                     , xdg-desktop-entry
                     , transformers>=0.5.2.0
                     , tuple >= 0.3.0.2
                     , utf8-string
                     , xmonad-contrib
                     , xmonad
  hs-source-dirs: .
  -- other-modules:
  default-language: Haskell2010
